# carcetti

./: Cargo.toml  README.md  packages.txt
src/: log.rs  main.rs  sort_clips.rs  tempdir.rs
src/melt/: mod.rs  playlist.rs  producer.rs  tractor.rs
src/ui/: mod.rs  subscriber.rs  textbox.rs
src/video/: clips.rs  mod.rs
src/video_info/: mod.rs  sample.rs
