[package]
name = "carcetti"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
coqui-stt = "1.0.2"
crossbeam-channel = "0.5.5"
crossterm = { version = "0.24.0", features = ["event-stream"] }
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg.git" }
image = { version = "0.24.2", default-features = false }
num_cpus = "1.13.1"
pollster = "0.2.5"
rayon = "1.5.3"
sharded-slab = "0.1.4"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tui = "0.18.0"
