[package]
name = "carcetti"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bytemuck = "1.10.0"
camino = "1.0.9"
coqui-stt = "1.0.2"
crossbeam-channel = "0.5.5"
crossterm = { version = "0.24.0", features = ["event-stream"] }
dirs = "4.0.0"
fastrand = "1.7.0"
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg.git" }
getrandom = { version = "0.2.7", features = ["std"] }
image = { version = "0.24.2", default-features = false }
ordered-float = "3.0.0"
quick-xml = "0.23.0"
rayon = "1.5.3"
ryu = "1.0.10"
sharded-slab = "0.1.4"
tinyvec = "1.6.0"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
tui = "0.18.0"
vsprintf = "2.0.0"
